styles/content-style.css
* {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  list-style: none;
  box-sizing: border-box;
}

.item1 { grid-area: bild1; }
.item2 { grid-area: medlem; }
.item3 { grid-area: hitta; }
.item4 { grid-area: bild2; }
.item5 { grid-area: bild3; }
.item6 { grid-area: utbud; }
.item7 { grid-area: motivation; }
.nested { grid-area: nested; }
.item9 { grid-area: inspireras; }
.item10 { grid-area: pt; }
.item11 { grid-area: klasser; }
.item12 { grid-area: jobba; }

.container {
display: grid;
grid-template-areas: 
	'bild1 bild1 bild1 bild1 medlem medlem'
    'hitta hitta hitta hitta bild2 bild2'
    'bild3 bild3 bild3 bild3 utbud utbud';
grid-gap: 1px;
background-color: #efefef;
} 

.container > div {
  background-color: #efefef;
  text-align: center;
  padding: 0;
  font-size: 30px;
  display: grid;
  align-items: center;
  justify-content: center;
}

.container2 {
display: grid;
grid-template-areas: 
	'motivation motivation motivation motivation motivation motivation'
    'nested nested nested nested nested nested';
grid-gap: 1px;
background-color: #fff;
padding-bottom: 10px;
} 

.container2 > div {
  background-color: rgba(255, 255, 255, 0.8);
  text-align: center;
  padding: 20px 0;
  font-size: 30px;
}

.nested {
display: grid;
grid-template-areas: 
	'inspireras inspireras pt pt klasser klasser';
/*grid-template-columns: repeat(3, 1fr);
grid-auto-rows: minmax(70px, auto); */
grid-gap: 1em;
}

.nested > div {
border: #fff 1px solid;
padding: 1em;
} 

.container3 {
display: grid;
grid-template-areas: 
	'jobba jobba jobba jobba jobba jobba';
grid-gap: 1px;
background-color: #002a4e;
padding: 0;
} 

.container3 > div {
  background-color: rgba(255, 255, 255, 0.5);
  text-align: center;
  padding: 0;
  font-size: 30px;
}

.img {
width: 100%;
height: 100%;
object-fit: cover;
}

.img2 {
width: 100%;
height: 100%;
object-fit: cover;
opacity: 0.15;
}

.h5 {
font-size: 12px;
}

.text {
font-size: 12px;
}

.text2 {
font-size: 14px;
}

.btn {
background-color: #3057bc;
border: none;
color: white;
padding: 10px;
text-align: center;
text-decoration: none;
display: inline-block;
font-size: 10px;
font-weight: bold;
margin: 4px 2px;
cursor: pointer;
border-radius: 3em;
}

.btn:hover {
background-color: #fff;
color: #002a4e;
}

.item12 {
  position: relative;
  text-align: center;
  color: white;
}

.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.fa-dumbbell,
.fa-running, 
.fa-project-diagram {
  color: #002a4e;
}

/*tablets*/
@media (max-width: 960px) { 

}

/*mobiles*/
@media (max-width: 768px) {

	.container {
    grid-template-areas: 
	'bild1'
    'medlem'
    'bild2'
    'hitta'
    'bild3'
    'utbud';
    }

	.nested {
    grid-template-areas: 
	'inspireras'
    'pt'
    'klasser';}
}

